Fix /read endpoint and add CORS
